added product popup box created

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1085,6 +1085,86 @@ button {
 
 /* navbar section css end */
 
+/* added-product-popupbox css start */
+.added-product-popup-box {
+    border: 1px solid rgba(100, 73, 63, 0.3);
+    max-width: 428px;
+    width: 100%;
+    border-radius: 2px;
+    -webkit-border-radius: 2px;
+    -moz-border-radius: 2px;
+    -ms-border-radius: 2px;
+    -o-border-radius: 2px;
+    position: fixed;
+    z-index: 99999;
+    top: 10px;
+    right: 10px;
+    background-color: var(--body-color);
+}
+
+.added-product-popup-box-inner {
+    max-width: 340px;
+    width: 100%;
+    padding: 10px;
+    margin: 0 auto;
+}
+
+.added-product-popup-title-wrap{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    gap: 20px;
+}
+
+.added-product-popup-title{
+    display: flex;
+    align-items: center;
+    gap: 10px;
+}
+
+.added-product-popup-title .icon{
+    width: 34px;
+    height: 34px;
+}
+
+.added-product-popup-title p {
+    text-transform: uppercase;
+    font-size: 12px;
+    font-weight: 600;
+}
+
+.added-product-popup-close-btn{
+    width: 30px;
+    height: 30px;
+    cursor: pointer;
+}
+
+.added-product-img {
+    max-width: 134px;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 0 auto;
+    padding: 20px 0;
+}
+
+.added-product-img img{
+    object-fit: contain;
+    margin: 0 auto;
+}
+
+.added-product-btn {
+    display: flex;
+}
+
+.added-product-btn .btn{
+    width: 100%;
+    font-size: 14px;
+    padding: 12px 30px;
+}
+/* added-product-popupbox css end */
+
 /* navbar css start */
 .nav-link-wrapper {
     position: fixed;
@@ -1665,6 +1745,14 @@ a.footer-mail {
     }
 
     /* side-cart css end */
+
+    /* added-product-popupbox css start */
+    .added-product-popup-box {
+        max-width: 335px;
+        top: 16px;
+        right: 20px;
+    }
+    /* added-product-popupbox css end */
 
     /* common css end */
 
