--- a/assets/css/product.css
+++ b/assets/css/product.css
@@ -62,16 +62,28 @@
     height: 100vh;
     background-color: var(--card-bg);
     z-index: 999;
-    transition: all ease .3s;
-    -webkit-transition: all ease .3s;
-    -moz-transition: all ease .3s;
-    -ms-transition: all ease .3s;
-    -o-transition: all ease .3s;
+    transition: all ease .5s;
+    -webkit-transition: all ease .5s;
+    -moz-transition: all ease .5s;
+    -ms-transition: all ease .5s;
+    -o-transition: all ease .5s;
 }
 
 .product-single-slider {
     width: 100%;
     height: 100vh;
+}
+
+.swiper.product-single-slider .swiper-pagination-fraction {
+    left: 50%;
+    width: fit-content;
+    top: 30px;
+    bottom: auto;
+    transform: translateX(-50%);
+    -webkit-transform: translateX(-50%);
+    -moz-transform: translateX(-50%);
+    -ms-transform: translateX(-50%);
+    -o-transform: translateX(-50%);
 }
 
 .product-img-area:hover {
@@ -105,11 +117,11 @@
     -moz-transform: translateY(-50%);
     -ms-transform: translateY(-50%);
     -o-transform: translateY(-50%);
-    transition: all ease .3s;
-    -webkit-transition: all ease .3s;
-    -moz-transition: all ease .3s;
-    -ms-transition: all ease .3s;
-    -o-transition: all ease .3s;
+    transition: all ease .5s;
+    -webkit-transition: all ease .5s;
+    -moz-transition: all ease .5s;
+    -ms-transition: all ease .5s;
+    -o-transition: all ease .5s;
 }
 
 .swiper-slide {
@@ -794,6 +806,11 @@
     /* update slider */
     .product-single-slider {
         height: 100%;
+    }
+
+    .swiper.product-single-slider .swiper-pagination-fraction {
+        top: auto;
+        bottom: 30px;
     }
 
     /* update slider */
